--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "readdirp": "2.1.0"
   },
   "scripts": {
-    "test": "tslint src/**/*.ts && tsc && mocha out/**/*.spec.js"
+    "test": "tslint src/**/*.ts && tsc && mocha out/**/*.spec.js",
+    "build": "tslint src/**/*.ts && tsc"
   }
 }
