--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
           "default": false,
           "description": "Allows to display errors."
         },
+        "less.showImplicitlyLabel": {
+          "type": "boolean",
+          "default": true,
+          "description": "Display a label if the file imported implicitly."
+        },
         "less.suggestVariables": {
           "type": "boolean",
           "default": true,
