--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "vscode-languageclient": "2.6.0",
     "vscode-languageserver": "2.6.0",
     "vscode-css-languageservice": "1.1.0",
+    "vscode-uri": "1.0.0",
     "readdir-enhanced": "1.4.4",
     "micromatch": "2.3.11",
     "less-symbols-parser": "2.1.0"
