--- a/package.json
+++ b/package.json
@@ -94,8 +94,11 @@
     "less-symbols-parser": "2.1.0"
   },
   "scripts": {
-    "test": "rimraf out && tslint src/**/*.ts && tsc && mocha out/**/*.spec.js",
-    "build": "tslint src/**/*.ts && tsc",
-    "watch": "tsc"
+    "clean": "rimraf out",
+    "lint": "tslint src/**/*.ts",
+    "compile": "tsc",
+    "test": "mocha out/**/*.spec.js",
+    "build": "npm run clean && npm run lint && npm run compile && npm test",
+    "watch": "npm run clean && npm run lint && npm run compile -- --watch"
   }
 }
