--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "publisher": "mrmlnc",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.5.0"
+    "vscode": "^1.8.0"
   },
   "icon": "icon.png",
   "homepage": "https://github.com/mrmlnc/vscode-less/blob/master/README.md",
@@ -41,7 +41,11 @@
           "items": {
             "type": "string"
           },
-          "default": ["**/.git", "**/node_modules", "**/bower_components"],
+          "default": [
+            "**/.git",
+            "**/node_modules",
+            "**/bower_components"
+          ],
           "description": "List of Glob-patterns for directories that are excluded when scanning."
         },
         "less.scanImportedFiles": {
@@ -55,7 +59,10 @@
           "description": "The maximum number of imported files to scan."
         },
         "less.implicitlyLabel": {
-          "type": ["string", "null"],
+          "type": [
+            "string",
+            "null"
+          ],
           "default": "(implicitly)",
           "description": "The text of a label that the file imported implicitly. If `null` then label not displayed."
         },
@@ -78,22 +85,26 @@
     }
   },
   "devDependencies": {
-    "vscode": "^1.0.3",
-    "typescript": "^2.0.6",
-    "tslint": "^3.15.1",
+    "@types/micromatch": "^2.3.29",
+    "@types/mocha": "^2.2.33",
+    "@types/node": "^6.0.52",
     "mocha": "^3.1.2",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.6",
+    "vscode": "^1.0.3"
   },
   "dependencies": {
-    "vscode-languageclient": "2.6.3",
-    "vscode-languageserver": "2.6.2",
-    "vscode-css-languageservice": "1.1.0",
+    "vscode-languageclient": "3.0.1-alpha.13",
+    "vscode-languageserver": "3.0.1-alpha.13",
+    "vscode-css-languageservice": "2.0.0-next.6",
     "vscode-uri": "1.0.0",
     "readdir-enhanced": "1.4.5",
     "micromatch": "2.3.11",
     "less-symbols-parser": "2.1.1"
   },
   "scripts": {
+    "postinstall": "node ./node_modules/vscode/bin/install",
     "clean": "rimraf out",
     "lint": "tslint src/**/*.ts",
     "compile": "tsc",
