--- a/package.json
+++ b/package.json
@@ -87,17 +87,18 @@
   "devDependencies": {
     "@types/micromatch": "^2.3.29",
     "@types/mocha": "^2.2.33",
-    "@types/node": "^6.0.52",
+    "@types/node": "^7.0.4",
     "mocha": "^3.1.2",
     "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
+    "tslint": "^4.4.2",
+    "tslint-config-xo": "^1.1.0",
     "typescript": "^2.0.6",
     "vscode": "^1.0.3"
   },
   "dependencies": {
-    "vscode-languageclient": "3.0.1-alpha.13",
-    "vscode-languageserver": "3.0.1-alpha.13",
-    "vscode-css-languageservice": "2.0.0-next.6",
+    "vscode-languageclient": "3.0.3",
+    "vscode-languageserver": "3.0.4",
+    "vscode-css-languageservice": "2.0.0-next.9",
     "vscode-uri": "1.0.0",
     "readdir-enhanced": "1.4.5",
     "micromatch": "2.3.11",
