Update VS Code debug settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 				"--extensionDevelopmentPath=${workspaceRoot}"
 			],
 			"stopOnEntry": false,
-			"outDir": "${workspaceRoot}/out"
+			"outFiles": ["${workspaceRoot}/out"]
 		}
 	]
 }
