Simplify repository URL

--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   },
   "icon": "icon.png",
   "homepage": "https://github.com/mrmlnc/vscode-less/blob/master/README.md",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mrmlnc/vscode-less"
-  },
+  "repository": "mrmlnc/vscode-less",
   "keywords": [
     "less",
     "autocompletion",
